# cchess

./: CMakeLists.txt
include/: board.h  castling.h  deepeval.h  eval.h  fen.h  file.h  files.h  move.h  movegen.h  piece.h  piecepos.h  random.h  rank.h  ranks.h  search.h  side.h  square.h  ttable.h  uci.h  zobrist.h
include/board/: board.h  board_fen.h  board_move.h  board_pieces.h
include/movegen/: movegen_bishop.h  movegen_common.h  movegen_king.h  movegen_knight.h  movegen_pawn.h  movegen_queen.h  movegen_rook.h
src/: board.c  cchess.c  deepeval.c  eval.c  fen.c  main.c  move.c  movegen.c  piece.c  piecepos.c  random.c  search.c  square.c  ttable.c  uci.c  zobrist.c
src/board/: board.c  board_fen.c  board_move.c  board_pieces.c
src/movegen/: movegen.c  movegen_bishop.c  movegen_common.c  movegen_king.c  movegen_knight.c  movegen_pawn.c  movegen_queen.c  movegen_rook.c
test/: test_board.c  test_board_init.c  test_board_make_unmake_move.c  test_board_pieces.c  test_fen.c  test_move.c  test_movegen.c  test_search.c  test_square.c  test_util.h  test_zobrist.c
